Fixing tests